# NotifyTools

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.gradle  ch-mount.sh  local.properties  settings.gradle
.github/workflows/: linux-aarch64-cpu-gcc.yml  linux-aarch64-cpu-gcc.yyy  linux-qemu-aarch64-cpu-gcc.yml  linux-x64-cpu-clang.yml  linux-x64-cpu-gcc.yml  linux-x64-cpu-gcc.yyy  windows-x64-cpu-vs2017.yml  windows-x64-cpu-vs2017.yyy  windows-x64-cpu-vs2019.yml  windows-x64-cpu-vs2019.yyy
1bpp-monochrome-bitmap/: build.gradle
3guoheros/: README.md
3guoheros/3gyjz-android/: 3gyjz-android.jks  build.gradle
3guoheros/3gyjz-pc/: README.md
3guoheros/三国志英杰传复刻版12846开源/: Readme.txt  config.lua
3guoheros/英杰传复刻版子MOD——纵横天下 42753开源/: 游戏说明.txt
AI-FACES/: PaddleLite.md  docker.md  insightface-mxnet-ncnn-mnn.md  insightface.md  mtcnn.md  ncnn-vulkan-neon.md  ncnn-vulkan.md  tnn-mace-tengine-opencl测试.md  tnn.md  tvm-insightface.md  百度腾讯阿里繁体竖排OCR测试.md
AI-FACES/mnn/: mnn.md
BingWallpage/: build.gradle
PeterCxy-Shelter/app/: build.gradle
SeetaFaceEngine/FaceAlignment/: CMakeLists.txt
SeetaFaceEngine/FaceIdentification/: CMakeLists.txt
SeetaFaceEngine/FaceIdentification/src/sftest/: CMakeLists.txt  SeetaFace.cpp  SeetaFace.h  sftest.cpp
SeetaFaceEngine/FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
WifiAdb1/: import-summary.txt  local.properties
WifiAdb1/app/: build.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: PhotoView.aar
beanutils/: build.gradle
c++chsarp/vscode/test/: CMakeLists.txt  main.cpp
c++chsarp/vscode/test/slibs/: CMakeLists.txt  Slog.cpp  Slog.h
china-poem/: build.gradle
chinesecalendar/: build.gradle  proguard-rules.pro
cplussharp/FireFoxPwdCrack/: ffpwd.sln
cplussharp/fluttertest/: .metadata  README.md  pubspec.yaml
cplussharp/linuxdrv-hello/: Makefile  hellolinuxdrv.c
cplussharp/ohos/lrzsz-0.12.20/: BUILD.gn  argz.h  config.h
cplussharp/ohos/lrzsz-0.12.20/intl/: bindtextdom.c  cat-compat.c  intl-compat.c
cplussharp/ohos/lrzsz-0.12.20/lib/: ansi2knr.c  error.c  long-options.c  mkdir.c  strftime.c  xstrtol.c
cplussharp/ohos/lrzsz-0.12.20/src/: config.h
cplussharp/ohos/testJson/entry/src/main/cpp/: CMakeLists.txt  hello.cpp
cplussharp/ohos/testJson/entry/src/main/cpp/hdctool/: CMakeLists.txt  showimage.cpp
cplussharp/ohos/testJson/entry/src/main/cpp/snapshotsf/: BUILD.gn
cplussharp/ohos/testJson/entry/src/main/cpp/snapshotsf/include/: snapshot_utils.h
cplussharp/ohos/testJson/entry/src/main/cpp/snapshotsf/src/: snapshot_display.cpp  snapshot_utils.cpp
cplussharp/ohos/testJson/entry/src/main/cpp/snapshotsf/test/: BUILD.gn
cplussharp/ohos/testJson/entry/src/main/cpp/snapshotsf/test/unittest/: BUILD.gn  snapshot_display_test.cpp  snapshot_utils_test.cpp
cplussharp/ohos/testJson/entry/src/main/cpp/types/libentry/: oh-package.json5
cplussharp/ohos/testcmake/: CMakeLists.txt  testcmake.cpp
cplussharp/ros/helloworld/src/hello/: CMakeLists.txt  package.xml
cplussharp/ros/helloworld/src/hello/src/: benchncnn.cpp  benchncnn_pub.cpp  img_pub.cpp  img_sub.cpp  listener.cpp  ncnn_retinaface.cpp  retinaface_node.cpp  talker.cpp
cplussharp/vscode/: .clang-format  CMakeLists.txt  vcpkg.json
cplussharp/vscode/pythonsodbg/: CMakeLists.txt  addd.cpp  gdb.sh  test.py
cplussharp/vscode/qt/qttest/: CMakeLists.txt  MainWidget1.cpp  MainWidget1.h  launch  qtmain.cpp  workspace  workspace.code-workspace
cplussharp/vscode/rusttest/autocxxtest/: Cargo.toml  build.rs
cplussharp/vscode/rusttest/autocxxtest/src/: bob.h  main.rs
cplussharp/vscode/rusttest/bindgentest/: Cargo.toml  build.rs  wrapper.h
cplussharp/vscode/rusttest/bindgentest/src/: main.rs
cplussharp/vscode/rusttest/greeting/: Cargo.toml
cplussharp/vscode/rusttest/greeting/src/: main.rs
cplussharp/vscode/test/: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
cplussharp/vscode/test/sftests/: CMakeLists.txt  test_boost.h  test_glog.h  test_spdlog.h  tests.h
cplussharp/vscode/test/slibs/: CMakeLists.txt  Slog.h
cplussharp/vscode/tests/slibs/: CMakeLists.txt  Slog  Slog.cpp
cplussharp/vscode/unittest/: CMakeLists.txt  log4cplustest.cpp  scurltest.cpp  shttphandletest.cpp  singaltest.cpp  sjsontest.cpp  sloghandletest.cpp  sluatest.cpp  sxmltest.cpp
cplussharp/vscode/unittest/xml2cxx/: artifacts-pskel.cxx  artifacts-pskel.hxx  artifacts.cxx  artifacts.h  artifacts.hxx  artifacts.xml  artifacts.xsd  note.md
cplussharp/vscode/utils/: CMakeLists.txt  SignalHandle.cpp  SignalHandle.h  SlogHandle.cpp  SlogHandle.h
cplussharp/vscode/vcpkg/: AsioHttp.hpp  CMakeLists.txt  Hmac.hpp  HttpIot.hpp  Log.hpp  ReqBean.cpp  ReqBean.hpp  Utils.hpp  common.hpp  main.cpp
demoCA/: newcert.pem  newkey.pem
docs/: android-rk3399增加app.md  android-rk3399增加drv.md  android-rk3399编译.md  firefox-thunderbird编译.md  linux-drvice-hello.md  ohos.md  rk--rockchip-linux5x.md  rk3399-debian-ros1.md
docs/foams-笔记/: readme.md  todo.md
face-detection/: build.gradle  local.properties  readme.md  settings.gradle
face-detection/OpenCVLibrary340/: build.gradle
face-detection/OpenCVSamplefacedetection/: build.gradle
face-detection/opencvjni/: build.gradle  proguard-rules.pro
fridaHookTest/: build.gradle
fridaHookTest/app/: build.gradle
fridaHookTest/testHook/: hookAcitivyOnResume.js
ideaJava/dbToJavaBean/: .classpath  .project
ideaJava/flutter_app1/: .metadata  README.md  pubspec.yaml
imguieditor/imgui-1.89.5/: CMakeLists.txt
java_js_2screen/: build.gradle  javajs.html
javatest/: build.gradle
javatest/c10test/: build.gradle
javatest/mongodbTest/: build.gradle
javatest/sm34/: pom.xml
lua-5.3.6/src/: CMakeLists.txt
nodejs/TsDev/: Test.ts  package.json  tsconfig.json
nodejs/dbtest/: mongodb.js
nodejs/iptools/: .babelrc  .gitignore  README.md  package.json  run.bat  tsconfig.json
submodules/lua-5.3.6/: CMakeLists.txt
submodules/lua-5.3.6/src/: CMakeLists.txt
third/: xzqh.html  xzqh.rar
toolchains/: aarch64-linux-gnu.toolchain.cmake
(+635 files in other folders)
